# SoundpackGenerator

./: .gitignore  README.md  build_and_release.py  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.js
src/: App.vue  index.css  main.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/mipmap-anydpi-v26/: ic_launcher.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: generator.rs  lib.rs  main.rs  settings.rs
src/components/: EditorModal.vue  ErrorModal.vue  PackCreateDialog.vue  RightSidebar.vue  SampleList.vue  SettingsModal.vue  Sf2GeneratorDialog.vue  SupportModal.vue  Toast.vue  WaveformEditor.vue
src/constants/: gm.js
src/utils/: pitchDetector.js
